Removed error field from json response and edited Unit Tests
